styling for the upper part of the talks cards

--- a/static/global.css
+++ b/static/global.css
@@ -1,4 +1,5 @@
 :root {
+  --dark-grey: #0F0E0E;
   --z-black: #010006;
   --z-grey: #292929;
   --red-znk: #ee2238;
@@ -57,6 +58,12 @@ h3 {
 
 p {
   font-size: var(--text-size-s);
+}
+
+.text-xs {
+  font-size: .875rem;
+  line-height: 1.125rem;
+  margin: 0;
 }
 
 a {
