add a component for the talk language instead of svgs

--- a/static/global.css
+++ b/static/global.css
@@ -2,7 +2,8 @@
   --dark-grey: #0F0E0E;
   --z-black: #010006;
   --z-grey: #292929;
-  --red-znk: #ee2238;
+  --z-blue: #414bb2;
+  --z-red: #ee2238;
 
   --text-size-xxl: 4rem;
   --text-size-xl: 3rem;
